// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea component sanity matches default snapshot 1`] = `
.c0 {
  color: #3F3D4B;
  background-color: #fff;
  padding: 16px;
  height: auto;
  border: 1px solid transparent;
  border-color: #CCC;
  border-radius: 4px;
  border-color: #CCC;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 1rem;
  line-height: 1;
}

.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-sizing: border-box;
}

.c0:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c0:focus {
  outline: none;
  border-color: #4E3FCE;
}

.c0:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.was-validated .c0:valid {
  border-color: #28C081;
}

.was-validated .c0:valid ~ svg.icon-valid {
  visibility: visible;
}

.was-validated .c0:invalid {
  border-color: #EC9081;
}

.was-validated .c0:invalid ~ svg.icon-invalid {
  visibility: visible;
}

<textarea
  class="c0"
  color="copyColor"
  font-family="sansSerif"
  font-size="1rem"
  height="auto"
/>
`;

exports[`Textarea component sanity matches themed snapshot 1`] = `
.c1 {
  color: #3F3D4B;
  background-color: #fff;
  padding: 16px;
  height: auto;
  border: 1px solid transparent;
  border-color: #CCC;
  border-radius: 4px;
  border-color: #CCC;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 1rem;
  line-height: 1;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-sizing: border-box;
}

.c1:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c1:focus {
  outline: none;
  border-color: #4E3FCE;
}

.c1:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.was-validated .c1:valid {
  border-color: #28C081;
}

.was-validated .c1:valid ~ svg.icon-valid {
  visibility: visible;
}

.was-validated .c1:invalid {
  border-color: #EC9081;
}

.was-validated .c1:invalid ~ svg.icon-invalid {
  visibility: visible;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <textarea
    class="c1"
    color="copyColor"
    font-family="sansSerif"
    font-size="1rem"
    height="auto"
  />
</div>
`;
